src/manifests/staging-v2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pollsensei-web-service
  namespace: staging-v2
spec:
  type: LoadBalancer
  selector:
    app: pollsensei-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
