src/manifests/staging-v2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pollsensei-web-ingress-staging-v2
  namespace: staging-v2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - staging-v2.pollsensei.ai
      secretName: staging-v2-pollsensei-web-tls
  rules:
    - host: staging-v2.pollsensei.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pollsensei-web-service
                port:
                  number: 3000
